[package]
name = "cognee-capi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
cognee-core = { path = "../../crates/core" }
cognee-database = { path = "../../crates/database", features = ["sqlite"] }
cognee-graph = { path = "../../crates/graph", features = ["testing"] }
cognee-vector = { path = "../../crates/vector", features = ["testing"] }
cognee-logging = { path = "../../crates/logging" }
# Optional opentelemetry / send_telemetry surfaces. Feature enabled
# by default per gap 07 decision 3.
cognee-observability = { path = "../../crates/observability", features = ["telemetry"] }
cognee-telemetry     = { path = "../../crates/telemetry",     features = ["telemetry"] }
# Required by `cognee_init_otlp` to pass `Registry` as the type
# parameter to `cognee_observability::init_telemetry::<Registry>`.
tracing-subscriber   = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
futures.workspace = true
tokio-stream = "0.1"
uuid.workspace = true
async-trait.workspace = true

[build-dependencies]
cbindgen = "0.27"
