[package]
name = "cognee-capi"
# Inherit version/edition from the capi workspace root (capi/Cargo.toml).
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
# Distributed as release-artifact tarballs (headers + libs), not a registry crate.
publish = false

[lib]
crate-type = ["cdylib", "staticlib"]
# Note: [target.'cfg(...)'.lib] is NOT a valid Cargo manifest table — only
# [target.'cfg(...)'.dependencies] is supported.  Cargo silently ignores any
# other per-target lib section with a "unused manifest key" warning.  To emit
# only a staticlib for iOS, build_xcframework.sh uses
#   cargo rustc --crate-type staticlib
# which overrides the crate-type for that one invocation only.

[features]
# Default feature set mirrors cognee-ts-neon (ts/cognee-ts-neon/Cargo.toml).
# A slim embedded build: --no-default-features --features sqlite,testing
default = [
    "visualization",
    "ladybug",
    "onnx",
    "hf-tokenizer",
    "tiktoken",
    "sqlite",
    "testing",
    # Product-analytics transport capability is compiled by default. Runtime
    # emission remains OFF until explicit opt-in. The cognee-lib
    # `send_telemetry` call sites are otherwise compiled out
    # because cognee-lib is pulled with `default-features = false`.
    "telemetry",
]
# Compiles in the cognee-lib/search/session/core `send_telemetry` call
# sites. Runtime emission is still gated by `is_disabled()`
# (explicit opt-in plus TELEMETRY_DISABLED / ENV / COGNEE_HOST_SDK) — see
# telemetry_analytics.rs.
telemetry     = ["cognee-lib/telemetry"]
visualization = ["cognee-lib/visualization",         "cognee-bindings-common/visualization"]
# The closed `cognee-c-cloud` cdylib (T15e) re-adds cloud via
# `cognee-bindings-cloud`; this OSS cdylib intentionally omits it.
ladybug       = ["cognee-lib/ladybug",               "cognee-bindings-common/ladybug"]
onnx          = ["cognee-lib/onnx",                  "cognee-bindings-common/onnx"]
hf-tokenizer  = ["cognee-lib/hf-tokenizer",          "cognee-bindings-common/hf-tokenizer"]
tiktoken      = ["cognee-lib/tiktoken",               "cognee-bindings-common/tiktoken"]
sqlite        = ["cognee-lib/sqlite",                "cognee-bindings-common/sqlite"]
# testing is in defaults because cg_task_context_mock requires mock
# graph/vector backends — same reason cognee-ts-neon keeps it.
testing       = ["cognee-lib/testing",               "cognee-bindings-common/testing"]
# Record/replay cassette-based mock LLM. Required for the iOS demo and offline
# testing. Enables `llm_mock` / `llm_cassette` settings keys at runtime.
mock-llm      = ["cognee-lib/mock-llm"]
# Test-only opt-in: exposes `cg_test_force_panic`, a no-return symbol
# that always panics. Used by the capi smoke tests under
# `capi/examples/panic_hook_smoke.c` to verify the gap-07 panic hook
# fires across FFI. Must NOT be enabled in release builds — the
# function exists exactly to crash the process.
testing-panic = []

[dependencies]
# Full cognee SDK.
# Feature set mirrors cognee-ts-neon; default-features = false so only the
# features listed above are enabled.
cognee-lib = { path = "../../crates/lib", default-features = false }
# Shared bindings facade (HandleState, CogneeServices, SdkError, wire helpers).
# Feature flags are forwarded identically to cognee-lib (the path resolves to
# the root-workspace member at crates/bindings-common).
cognee-bindings-common = { path = "../../crates/bindings-common", default-features = false }
serde_json = { workspace = true }
# Kept as direct deps so the existing engine modules (task_context.rs etc.)
# keep their crate-path imports without a rewire. These are path deps that
# resolve to the same versions cognee-lib pulls in.
cognee-core = { path = "../../crates/core" }
cognee-database = { path = "../../crates/database", features = ["sqlite"] }
cognee-graph = { path = "../../crates/graph", features = ["testing"] }
cognee-vector = { path = "../../crates/vector", features = ["testing"] }
cognee-logging = { path = "../../crates/logging" }
# Optional opentelemetry / send_telemetry surfaces. Feature enabled
# by default per gap 07 decision 3.
cognee-observability = { path = "../../crates/observability", features = ["telemetry"] }
cognee-telemetry     = { path = "../../crates/telemetry",     features = ["telemetry"] }
# Required by `cognee_init_otlp` to pass `Registry` as the type
# parameter to `cognee_observability::init_telemetry::<Registry>`.
# Explicit pinned version — not inherited from root workspace (separate workspace).
tracing-subscriber   = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
futures.workspace = true
tokio-stream = "0.1"
uuid.workspace = true
async-trait.workspace = true
