[package]
name    = "cognee-bench"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[[bench]]
name    = "batch_add_cognify"
harness = false

[dev-dependencies]
criterion  = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
reqwest    = { workspace = true, features = ["blocking"] }
rand       = { workspace = true }
uuid       = { workspace = true }
tempfile   = { workspace = true }
serde_json = { workspace = true }
