[package]
name    = "cognee-bench"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bench]]
name    = "batch_add_cognify"
harness = false

[dev-dependencies]
criterion  = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
reqwest    = { workspace = true, features = ["blocking"] }
rand       = { workspace = true }
uuid       = { workspace = true }
tempfile   = { workspace = true }
serde_json = { workspace = true }
