[package]
name = "cognee-chunking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[dependencies]
async-trait.workspace = true
cognee-models = { path = "../models" }
cognee-storage = { path = "../storage" }
cognee-utils = { path = "../utils" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
tokenizers = { workspace = true, optional = true }
tiktoken-rs = { workspace = true, optional = true }

[features]
default      = []
hf-tokenizer = ["dep:tokenizers", "tokenizers/http"]
tiktoken     = ["dep:tiktoken-rs"]

[dev-dependencies]
cognee-storage = { path = "../storage", features = ["testing"] }
tokio.workspace = true
