[package]
name = "cognee-chunking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Text chunking and token counting for the cognee ingestion pipeline."
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
async-trait.workspace = true
cognee-models = { path = "../models", version = "0.1.1" }
cognee-storage = { path = "../storage", version = "0.1.1" }
cognee-utils = { path = "../utils", version = "0.1.1" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
tokenizers = { workspace = true, optional = true }
tiktoken-rs = { workspace = true, optional = true }

[features]
default      = []
hf-tokenizer = ["dep:tokenizers", "tokenizers/http"]
tiktoken     = ["dep:tiktoken-rs"]

[dev-dependencies]
cognee-storage = { path = "../storage", features = ["testing"] }
tokio.workspace = true
