[package]
name = "cognee-cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "cognee-cli"
path = "src/main.rs"

[features]
default = [
    "onnx",
    "ladybug",
    "qdrant",
    "pgvector",
    "pggraph",
    "sqlite",
    "postgres",
    "hf-tokenizer",
    "tiktoken",
    "pdf-pdfium",
    "csv-loader",
    "html-loader",
    "image-loader",
    "audio-loader",
    "unstructured",
    "visualization",
    "cloud",
    "mock-llm",
    # decision 1: telemetry is ON by default in cognee-cli. Disable with
    # --no-default-features for compile-time opt-out.
    "telemetry",
]
cloud         = ["cognee-lib/cloud"]
mock-llm      = ["cognee-lib/mock-llm"]
onnx          = ["cognee-lib/onnx"]
ladybug       = ["cognee-lib/ladybug"]
qdrant        = ["cognee-lib/qdrant"]
pgvector      = ["cognee-lib/pgvector"]
pggraph       = ["cognee-lib/pggraph"]
sqlite        = ["cognee-lib/sqlite"]
postgres      = ["cognee-lib/postgres"]
hf-tokenizer  = ["cognee-lib/hf-tokenizer"]
tiktoken      = ["cognee-lib/tiktoken"]
telemetry     = ["cognee-lib/telemetry"]
visualization = ["cognee-lib/visualization"]

# Document format loaders (forwarded through cognee-lib)
pdf-pdfium        = ["cognee-lib/pdf-pdfium"]
pdf-pure-rust     = ["cognee-lib/pdf-pure-rust"]
csv-loader        = ["cognee-lib/csv-loader"]
html-loader       = ["cognee-lib/html-loader"]
image-loader      = ["cognee-lib/image-loader"]
audio-loader      = ["cognee-lib/audio-loader"]
unstructured      = ["cognee-lib/unstructured"]
unstructured-xlsx = ["cognee-lib/unstructured-xlsx"]
unstructured-docx = ["cognee-lib/unstructured-docx"]
unstructured-pptx = ["cognee-lib/unstructured-pptx"]
unstructured-epub = ["cognee-lib/unstructured-epub"]
unstructured-eml  = ["cognee-lib/unstructured-eml"]
unstructured-odt  = ["cognee-lib/unstructured-odt"]
unstructured-odp  = ["cognee-lib/unstructured-odp"]

# Composite feature for Android CLI builds
android-default = ["cognee-lib/android-default"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
dotenv.workspace = true
cognee-lib = { path = "../lib" }
cognee-logging = { path = "../logging" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
md-5.workspace = true
mockito = "1"
predicates.workspace = true
rusqlite = "0.32"
tempfile.workspace = true
