[package]
name = "cognee-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Not published to crates.io — the CLI binary is built from source (see the
# root README Quick Start). release-plz skips publish=false crates.
publish = false
description.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "cognee-cli"
path = "src/main.rs"

[features]
default = [
    "onnx",
    "ladybug",
    "pgvector",
    "pggraph",
    "sqlite",
    "postgres",
    "hf-tokenizer",
    "tiktoken",
    "pdf-pdfium",
    "csv-loader",
    "html-loader",
    "image-loader",
    "audio-loader",
    "unstructured",
    "visualization",
    "mock-llm",
    "bench",
    # decision 1: telemetry is ON by default in cognee-cli. Disable with
    # --no-default-features for compile-time opt-out.
    "telemetry",
]
mock-llm      = ["cognee-lib/mock-llm"]
# `bench` adds the `bench` subcommand (perf orchestrator driver). Pulls no heavy
# deps — just reuses the existing pipeline wiring + tempfile — so it is on by
# default.
bench         = ["dep:tempfile"]
onnx          = ["cognee-lib/onnx"]
# Platform-specific GPU acceleration for ONNX Runtime (opt-in, NOT in default).
# Enable for NVIDIA hardware: --features ort-cuda or --features ort-tensorrt.
ort-cuda      = ["cognee-lib/ort-cuda"]
ort-tensorrt  = ["cognee-lib/ort-tensorrt"]
onnx-dynamic  = ["cognee-lib/onnx-dynamic"]
ladybug       = ["cognee-lib/ladybug"]
pgvector      = ["cognee-lib/pgvector"]
pggraph       = ["cognee-lib/pggraph"]
sqlite        = ["cognee-lib/sqlite"]
postgres      = ["cognee-lib/postgres"]
hf-tokenizer  = ["cognee-lib/hf-tokenizer"]
tiktoken      = ["cognee-lib/tiktoken"]
telemetry     = ["cognee-lib/telemetry"]
visualization = ["cognee-lib/visualization"]

# Document format loaders (forwarded through cognee-lib)
pdf-pdfium        = ["cognee-lib/pdf-pdfium"]
pdf-pure-rust     = ["cognee-lib/pdf-pure-rust"]
csv-loader        = ["cognee-lib/csv-loader"]
html-loader       = ["cognee-lib/html-loader"]
image-loader      = ["cognee-lib/image-loader"]
audio-loader      = ["cognee-lib/audio-loader"]
unstructured      = ["cognee-lib/unstructured"]
unstructured-xlsx = ["cognee-lib/unstructured-xlsx"]
unstructured-docx = ["cognee-lib/unstructured-docx"]
unstructured-pptx = ["cognee-lib/unstructured-pptx"]
unstructured-epub = ["cognee-lib/unstructured-epub"]
unstructured-eml  = ["cognee-lib/unstructured-eml"]
unstructured-odt  = ["cognee-lib/unstructured-odt"]
unstructured-odp  = ["cognee-lib/unstructured-odp"]

# Composite feature for Android CLI builds
android-default = ["cognee-lib/android-default"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
cognee-lib = { path = "../lib", version = "0.1.1" }
cognee-logging = { path = "../logging", version = "0.1.1" }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
# Optional: only pulled in by the `bench` feature (per-run temp isolation).
tempfile = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd.workspace = true
md-5.workspace = true
mockito = "1"
predicates.workspace = true
rusqlite = "0.32"
tempfile.workspace = true
