[package]
name = "cognee-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
# Not published to crates.io — the CLI binary is built from source (see the
# root README Quick Start). The release workflow skips publish=false crates.
publish = false
description.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "cognee-cli"
path = "src/main.rs"

[features]
default = [
    "onnx",
    "ladybug",
    "pgvector",
    "pggraph",
    "sqlite",
    "postgres",
    "hf-tokenizer",
    "tiktoken",
    "pdf-pdfium",
    "csv-loader",
    "html-loader",
    "image-loader",
    "audio-loader",
    "unstructured",
    "visualization",
    "mock-llm",
    "bench",
    # Telemetry transport capability is compiled by default, but product
    # analytics remain runtime-disabled until explicit opt-in.
    "telemetry",
]
mock-llm      = ["cognee/mock-llm"]
# `bench` adds the `bench` subcommand (perf orchestrator driver). Pulls no heavy
# deps — just reuses the existing pipeline wiring + tempfile — so it is on by
# default.
bench         = ["dep:tempfile"]
# `profiling` wires a SIGPROF sampling profiler (pprof-rs) into the bench
# subcommand, emitting a per-phase flamegraph SVG with no `perf` permissions and
# no root. Opt-in (NOT in default) so normal bench runs stay lean and CI can
# still emit flamegraphs offline via `--features bench,profiling`.
profiling     = ["dep:pprof"]
onnx          = ["cognee/onnx"]
# Platform-specific GPU acceleration for ONNX Runtime (opt-in, NOT in default).
# Enable for NVIDIA hardware: --features ort-cuda or --features ort-tensorrt.
ort-cuda      = ["cognee/ort-cuda"]
ort-tensorrt  = ["cognee/ort-tensorrt"]
onnx-dynamic  = ["cognee/onnx-dynamic"]
ladybug       = ["cognee/ladybug"]
pgvector      = ["cognee/pgvector"]
pggraph       = ["cognee/pggraph"]
sqlite        = ["cognee/sqlite"]
postgres      = ["cognee/postgres"]
hf-tokenizer  = ["cognee/hf-tokenizer"]
tiktoken      = ["cognee/tiktoken"]
telemetry     = ["cognee/telemetry"]
visualization = ["cognee/visualization"]

# Document format loaders (forwarded through cognee)
pdf-pdfium        = ["cognee/pdf-pdfium"]
pdf-pure-rust     = ["cognee/pdf-pure-rust"]
csv-loader        = ["cognee/csv-loader"]
html-loader       = ["cognee/html-loader"]
image-loader      = ["cognee/image-loader"]
audio-loader      = ["cognee/audio-loader"]
unstructured      = ["cognee/unstructured"]
unstructured-xlsx = ["cognee/unstructured-xlsx"]
unstructured-docx = ["cognee/unstructured-docx"]
unstructured-pptx = ["cognee/unstructured-pptx"]
unstructured-epub = ["cognee/unstructured-epub"]
unstructured-eml  = ["cognee/unstructured-eml"]
unstructured-odt  = ["cognee/unstructured-odt"]
unstructured-odp  = ["cognee/unstructured-odp"]

# Composite feature for Android CLI builds
android-default = ["cognee/android-default"]

[dependencies]
clap = { workspace = true, features = ["derive"] }
cognee = { path = "../lib", version = "0.1.3" }
cognee-logging = { path = "../logging", version = "0.1.3" }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
# Optional: only pulled in by the `bench` feature (per-run temp isolation).
tempfile = { workspace = true, optional = true }
# Optional: only pulled in by the `profiling` feature. Pure-Rust SIGPROF
# sampling profiler. Emits a per-phase flamegraph SVG, no `perf` or root needed.
pprof = { version = "0.14", default-features = false, features = ["flamegraph"], optional = true }

[dev-dependencies]
assert_cmd.workspace = true
md-5.workspace = true
mockito = "1"
predicates.workspace = true
rusqlite = "0.32"
tempfile.workspace = true
