[package]
name = "cognee-chunking"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
cognee-models = { path = "../cognee-models" }
cognee-storage = { path = "../cognee-storage" }
cognee-utils = { path = "../cognee-utils" }
log.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
cognee-storage = { path = "../cognee-storage", features = ["testing"] }
tokio.workspace = true
