[package]
name = "cognee-cli"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "cognee-cli"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
cognee-lib = { path = "../cognee-lib" }
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true