[package]
name = "cognee-cognify"
version = "0.1.0"
edition = "2024"

[features]
testing = ["cognee-storage/testing"]

[dependencies]
cognee-models = { path = "../cognee-models" }
cognee-storage = { path = "../cognee-storage" }
cognee-chunking = { path = "../cognee-chunking" }
cognee-llm = { path = "../cognee-llm" }

uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
async-trait = "0.1.89"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
futures = "0.3"

[dev-dependencies]
cognee-storage = { path = "../cognee-storage", features = ["testing"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
